src/ui/snapshots/terminal_rpg__ui__tests__items_use_ascii_color.snap
---
source: src/ui/mod.rs
expression: "terminal_text(&terminal, 80, 24)"
---
+ The Ossuary ---------------------------------------++ Use Item --------------+
|                                                    ||USE ITEM                |
|                                                    ||Choose slot 1-4         |
|                                        .           ||                        |
|                                        .           ||1 Grave Torch           |
|                                        .           ||Passive                 |
|                                      ##.##         ||2 Empty                 |
|                                    t.......        ||3 Health Potion         |
|                                    v.......        ||Usable                  |
|                                   #........#       ||4 Empty                 |
|                                   #........#       ||                        |
|                                   #....@...#       ||u / Esc cancels         |
|                                   #........#       ||                        |
|                                   #........#       ||                        |
|                                    ........        ||                        |
|                                      #####         ||                        |
|                                                    ||                        |
|                                                    ||                        |
+----------------------------------------------------++------------------------+
+ Events ----------------------------------------------------------------------+
|The crypt waits in silence.                                                   |
|You descend into the ossuary.                                                 |
+------------------------------------------------------------------------------+
USE ITEM 1-4 select | u/Esc cancel | ?:Help Q:Quit
